9. Elastic Cloud on Kubernetes/quick-start-es-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickstart-es-http
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: es.localhost
      http:
        paths:
          - path: /
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
            pathType: Prefix
